feat: Replace Yahoo Finance API with Finnhub API
- Updated build.gradle to use Finnhub client and Java 17.
- Updated StockApiClient to use the Finnhub API.
- Updated Main to pass the Finnhub API key.
- Updated tests to reflect the new API client.
- Updated README with new instructions and API information.